Issue #3378784 by Harish1688, bnjmnm, djsagar: "Skip to main content" insufficient contrast

--- a/styles/base/_body.scss
+++ b/styles/base/_body.scss
@@ -50,6 +50,10 @@ a {
   .gin--dark-mode & {
     color: #FFF;
   }
+
+  &.skip-link {
+    color: var(--gin-color-button-text);
+  }
 }
 
 
